Fixed page height changes by adding overflow: hidden to some elements and thus removed column close on scroll

--- a/Pirerre_JS/09-23-20_projet/css/style.css
+++ b/Pirerre_JS/09-23-20_projet/css/style.css
@@ -19,6 +19,7 @@
 }
 
 .navbar {
+    overflow: hidden;
     background-color: #472b41 !important;
 }
 
@@ -103,7 +104,7 @@
     color: #efa10a;
     position: absolute;
     top: 40vh;
-    transform: translateY(-100%);
+    transform: translateY(-50%);
     opacity: 0;
     font-size: 4em;
     transition: all 1.5s ease-out;
@@ -119,7 +120,7 @@
     text-align: center;
     top: 55vh;
     opacity: 0;
-    transform: translateY(100%);
+    transform: translateY(50%);
     transition: all 2s;
 }
 
@@ -194,14 +195,23 @@
     visibility: hidden;
 }
 
+.slider:nth-of-type(1) {
+    transform: translateX(-100%);
+}
+
+.slider:nth-of-type(2) {
+    transform: translateX(100%);
+}
+
 .slider {
     font-family: "Montserrat", sans-serif;
     text-shadow: 1px 1px #efa10a;
     color: #a46acb;
     opacity: 0;
-    transform: translateY(100%);
+    overflow: hidden;
     transition: all 2s;
 }
+
 
 .slider span {
     color: #57d3a8;
@@ -210,7 +220,7 @@
 
 .slid {
     opacity: 100%;
-    transform: translateY(0);
+    transform: translateX(0) !important;
 }
 
 .bodySlid {
